<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadastro Conta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tipo_conta">Tipo de conta</string>
    <string name="corrente">Corrente</string>
    <string name="poupanca">Poupança</string>
    <string name="numero">Número</string>
    <string name="extras">Extras</string>
    <string name="cartao_credito">Cartão de crédito</string>
    <string name="talao_cheques">Talão de cheques</string>
    <string name="seguro_cartao">Seguro do cartão</string>
    <string name="salvar">Salvar</string>

</resources>
