<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.qi.cadastroconta.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_conta"
        android:textSize="8pt" />

    <RadioGroup
        android:id="@+id/rgTipoConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbContaCorrente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corrente"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbContaPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poupanca" />

    </RadioGroup>

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/numero"
        android:layout_marginTop="15dp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        android:layout_marginTop="15dp"
        android:textSize="8pt" />

    <CheckBox
        android:id="@+id/cbCartaoCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_credito" />

    <CheckBox
        android:id="@+id/cbTalaoCheque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talao_cheques" />

    <CheckBox
        android:id="@+id/cbSeguroCartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seguro_cartao" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_gravity="right"
        android:layout_marginTop="15dp" />

</LinearLayout>